# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.18761 (07 Jun 2011)

  07 Jun 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18252.ebuild, +portage-2.2.01.18761.ebuild:
  Version bump, matches portage-2.2.0_alpha38

*portage-2.2.01.18706 (29 May 2011)

  29 May 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18703.ebuild, +portage-2.2.01.18706.ebuild:
  Fix for find error with e.g. virtual packages, bug #368839, changed fowners
  not to operate in Prefix for non-privileged users

*portage-2.2.01.18703 (28 May 2011)

  28 May 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18213.ebuild, +portage-2.2.01.18703.ebuild:
  Version bump, matches portage-2.2.0_alpha37

*portage-2.2.01.18252 (17 Apr 2011)

  17 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18125.ebuild, +portage-2.2.01.18252.ebuild:
  Version bump, matches portage-2.2.0_alpha30

  10 Apr 2011; Fabian Groffen <grobian@gentoo.org>
  portage-2.2.00.15842-r1.ebuild, portage-2.2.01.15553.ebuild,
  portage-2.2.01.18125.ebuild, portage-2.2.01.18213.ebuild:
  Remove PROVIDE=virtual/portage, bug #358847

  01 Apr 2011; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.01.18213.ebuild, +files/portage-2.2.01.18213-ebuildshell.patch:
  update ebuildshell patch (#155161)

*portage-2.2.01.18213 (28 Mar 2011)

  28 Mar 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18091.ebuild, +portage-2.2.01.18213.ebuild:
  Version bump, matches portage-2.2.0_alpha29

*portage-2.2.01.18125 (17 Mar 2011)

  17 Mar 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.18125.ebuild:
  Version bump

*portage-2.2.01.18091 (13 Mar 2011)

  13 Mar 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17901.ebuild, +portage-2.2.01.18091.ebuild:
  Version bump, matches portage-2.2.0_alpha26, includes loadavg patch for AIX
  and HP-UX

*portage-2.2.01.18036 (27 Feb 2011)
