@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.01.18826 (14 Jun 2011)
+
+  14 Jun 2011; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.15842-r1.ebuild, -portage-2.2.01.15553.ebuild,
+  +portage-2.2.01.18826.ebuild:
+  Version bump, matches portage-2.2.0_alpha40
+
 *portage-2.2.01.18761 (07 Jun 2011)
 
   07 Jun 2011; Fabian Groffen <grobian@gentoo.org>
